force-app/main/default/objects/Schedule_Revenue_Batch_Setting__mdt/Schedule_Revenue_Batch_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This is used to hold the batchclass excecution query rule for BatchOLIScheduleRevenueQtrCalc class</description>
    <label>Schedule Revenue Batch Setting</label>
    <pluralLabel>Schedule Revenue Batch Settings</pluralLabel>
</CustomObject>