force-app/main/default/objects/Schedule_Revenue_Batch_Setting__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <label>BatchSize</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>