force-app/main/default/objects/Schedule_Revenue_Batch_Setting__mdt/fields/BookDateFromPast__c.field-meta.xml
<CustomField>
    <fullName>BookDateFromPast__c</fullName>
    <inlineHelpText>select date to query from which bookdate the opptys to be considered</inlineHelpText>
    <label>BookDateFromPast</label>
    <type>Date</type>
</CustomField>