force-app/main/default/objects/Schedule_Revenue_Batch_Setting__mdt/fields/IgnoreAllClosedOppty__c.field-meta.xml
<CustomField>
    <fullName>IgnoreAllClosedOppty__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>check to ignore all the closed opptys in query</inlineHelpText>
    <label>IgnoreAllClosedOppty</label>
    <type>Checkbox</type>
</CustomField>