force-app/main/default/objects/Schedule_Revenue_Batch_Setting__mdt/fields/RerunFailedRecords__c.field-meta.xml
<CustomField>
    <fullName>RerunFailedRecords__c</fullName>
    <defaultValue>true</defaultValue>
    <description>to rerun the failed records during update</description>
    <inlineHelpText>check to rerun the failed records</inlineHelpText>
    <label>RerunFailedRecords</label>
    <type>Checkbox</type>
</CustomField>