force-app/main/default/objects/Schedule_Revenue_Batch_Setting__mdt/validationRules/BookDateFromPast_value_is_from_past.validationRule-meta.xml
<ValidationRule>
    <fullName>BookDateFromPast_value_is_from_past</fullName>
    <active>true</active>
    <errorConditionFormula>BookDateFromPast__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>BookDateFromPast__c</errorDisplayField>
    <errorMessage>Selected date must be from past</errorMessage>
</ValidationRule>